[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/dependency/ui_elements/input_open_file/InputOpenFile.gd" type="Script" id=1]

[node name="InputOpenFile" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.0601852
margin_bottom = -31.4
rect_min_size = Vector2( 0, 65 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Name"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 1920.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 20

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 1825.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1845.0
margin_right = 1920.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 0 )
text = "browse "

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 344.0
margin_top = 160.0
margin_right = 683.0
margin_bottom = 392.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/media/mayank/Assets1/Software Dev/world building software"
current_path = "/media/mayank/Assets1/Software Dev/world building software/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_value_changed" from="." to="." method="_on_InputOpenFile_input_value_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
